# applewatch-vitalpipe-mcp-serverless

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  template.yaml
docs/: 基本設計.md  要件定義.md
handlers/authorizer/: app.py
handlers/ingest_function/: app.py
handlers/mcp_function/: app.py
health_mcp/: auth.py  dynamo.py  haepayload.py  queries.py  timeutil.py  trend.py  units.py
tests/: conftest.py  test_auth.py  test_authorizer_handler.py  test_dynamo.py  test_haepayload.py  test_ingest_handler.py  test_mcp_function_app.py  test_queries.py  test_timeutil.py  test_trend.py  test_units.py
