[project]
name = "applewatch-vitalpipe-mcp-serverless"
version = "0.1.0"
description = "Apple Watch health data MCP pipeline (AWS serverless)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "boto3>=1.34",
    "fastmcp>=2.3",
    "mangum>=0.19",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[dynamodb,ssm]>=5.0",
    "ruff>=0.6",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["health_mcp"]
